AUX_SOURCE_DIRECTORY(. OUE_SRC_LIST)
AUX_HEADER_DIRECTORY(. OUE_HEAD_LIST)
AUX_SOURCE_DIRECTORY(Impl OUE_IMPL_SRC_LIST)
AUX_HEADER_DIRECTORY(Impl OUE_IMPL_HEAD_LIST)
AUX_SOURCE_DIRECTORY(Impl/DXLib OUE_IMPL_DXLIB_SRC_LIST)
AUX_HEADER_DIRECTORY(Impl/DXLib OUE_IMPL_DXLIB_HEAD_LIST)
AUX_SOURCE_DIRECTORY(swig OUE_SWIG_SRC_LIST)
AUX_HEADER_DIRECTORY(swig OUE_SWIG_HEAD_LIST)
FILE(GLOB OUE_SWIG_INTERFACE_LIST swig/*.i)

SOURCE_GROUP(implement FILES ${OUE_IMPL_SRC_LIST} ${OUE_IMPL_HEAD_LIST})
SOURCE_GROUP(implement\\DXLib FILES ${OUE_IMPL_DXLIB_SRC_LIST} ${OUE_IMPL_DXLIB_HEAD_LIST})
SOURCE_GROUP(swig FILES ${OUE_SWIG_SRC_LIST} ${OUE_SWIG_HEAD_LIST} ${OUE_SWIG_INTERFACE_LIST})
ADD_LIBRARY(${OUE_LIB} SHARED ${OUE_SRC_LIST} ${OUE_HEAD_LIST} ${OUE_IMPL_SRC_LIST} ${OUE_IMPL_HEAD_LIST} ${OUE_IMPL_DXLIB_SRC_LIST} ${OUE_IMPL_DXLIB_HEAD_LIST} ${OUE_SWIG_SRC_LIST} ${OUE_SWIG_HEAD_LIST} ${OUE_SWIG_INTERFACE_LIST})
SET_TARGET_PROPERTIES(${OUE_LIB} PROPERTIES
	IMPORT_SUFFIX .lib SUFFIX .so IMPORT_PREFIX "" PREFIX "" 
	COMPILE_DEFINITIONS "ONEU_EXPORTS;_UNICODE"
	PUBLIC_HEADER OUE_HEAD_LIST
	RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR}
	)


TARGET_LINK_LIBRARIES(${OUE_LIB} ${LUA_LIB}  ${RUBTLIB})
