CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Oneu_Engine)
MESSAGE(STATUS "Oneu Engine building...")
MESSAGE(STATUS "OS:"${CMAKE_SYSTEM_NAME})
IF(NOT DEFINED ENV{DXSDK_DIR})
	MESSAGE(FATAL_ERROR "DXSDK doesn't exist!")
ENDIF()
MESSAGE(STATUS "DXSDK Directory:"$ENV{DXSDK_DIR})
MESSAGE(STATUS "Source Directory:"${CMAKE_SOURCE_DIR})
#initialize directories and variables
LINK_DIRECTORIES($ENV{DXSDK_DIR}lib/x86/ ${CMAKE_SOURCE_DIR}/lib)
INCLUDE_DIRECTORIES($ENV{DXSDK_DIR}include/ ../_lua/ include/ruby-1.9.1-p180 include/ruby-1.9.1-p180/i386-mswin32)

SET(BIN_DIR ${CMAKE_BINARY_DIR})
SET(OUE_LIB OUE)
SET(LUA_LIB _lua)

#dependencies
SET(RUBY_LIB msvcr80-ruby191)

#macro definitions
MACRO(AUX_HEADER_DIRECTORY DIR VAR)
	FILE(GLOB ${ARGV1} ${DIR}/*.h)
ENDMACRO(AUX_HEADER_DIRECTORY)
#subdirectories
ADD_SUBDIRECTORY(_lua)
ADD_SUBDIRECTORY(OUE)
ADD_SUBDIRECTORY(Game)

